--- a/GlucoMan.Mobile/GlucoMan.Mobile/CorrectionParametersPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/CorrectionParametersPage.xaml
@@ -31,17 +31,17 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.ColumnSpan="4" Text="Calculation of RatioCHO/insulin" 
-                   XAlign="Center" YAlign="End" FontSize="Large"/>
+                   XAlign="Center" YAlign="End" FontSize="Large" FontAttributes="Bold"/>
             <Label Grid.Row="1" Grid.ColumnSpan="4" Text="(better if calculated from dietist)" 
                    XAlign="Center" YAlign="End"/>
             <Label Grid.Row="2" Grid.ColumnSpan="4" Text="Calculation to be implemented yet" 
                     FontSize="Medium" XAlign="Center" YAlign="End" BackgroundColor="Red" TextColor="Yellow"/>
+            
             <Label Grid.Row="3" Grid.ColumnSpan="4" Text="Ratio CHO / insulin" 
-                    FontSize="Medium" XAlign="Center" YAlign="End"/>
+                    FontSize="Medium" XAlign="Center" YAlign="End" />
             <Label Grid.Row="4" Grid.Column="0" Text="Breakfast" XAlign="Center" YAlign="End" />
             <Label Grid.Row="4" Grid.Column="1" Text="Lunch" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="4" Grid.Column="2" Text="Dinner" XAlign="Center" YAlign="End"/>
-
             <Entry Grid.Row="5" Grid.Column="0" x:Name="txtChoInsulinRatioBreakfast" Text="" 
                    Placeholder="break.ratio" HorizontalTextAlignment ="End" BackgroundColor="PaleGreen" />
             <Entry Grid.Row="5" Grid.Column="1" x:Name="txtChoInsulinRatioLunch" Text="" 
@@ -55,7 +55,7 @@
                    XAlign="Center" YAlign="End" FontSize="Large"/>
             
             <Label Grid.Row="7" Grid.ColumnSpan="4" Text="Calculation of insulin sensitivity" 
-                   FontSize="Large"  XAlign="Center" YAlign="End"/>
+                   FontSize="Large"  XAlign="Center" YAlign="End" FontAttributes="Bold"/>
             <Label Grid.Row="8" Grid.ColumnSpan="4" Text="Typical boluses made during a day [Ui]" 
                    FontSize="Medium" XAlign="Center" YAlign="End"/>
 
@@ -93,7 +93,7 @@
                     Clicked="btnInsulinSensitivityCalculation_Click"/>
 
             <Label Grid.Row="13" Grid.ColumnSpan="4" Text="Physical Activity parameters" 
-                   XAlign="Center" YAlign="End" FontSize="Large"/>
+                   XAlign="Center" YAlign="End" FontSize="Large" FontAttributes="Bold"/>
             <Label Grid.Row="14" Grid.ColumnSpan="4" Text="Calculation to be implemented yet" 
                     FontSize="Medium" XAlign="Center" YAlign="End" BackgroundColor="Red" TextColor="Yellow"/>
             <Button Grid.Row="15" Grid.Column="3" x:Name="btnPhysicalActivityCalculation" Text="Calc"
