--- a/GlucoMan.Mobile/GlucoMan.Mobile/InsulinCalcPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/InsulinCalcPage.xaml
@@ -54,9 +54,11 @@
             <Label Grid.Row="5" Grid.Column="2" Text="Gl. to correct" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="5" Grid.Column="3" Text="CHO to eat" XAlign="Center" YAlign="End"/>
 
-            <Entry Grid.Row="6" Grid.Column="0" HorizontalTextAlignment ="End" x:Name="txtGlucoseBeforeMeal" Text="" FontSize="Large" 
+            <Entry Grid.Row="6" Grid.Column="0" HorizontalTextAlignment ="End" 
+                   x:Name="txtGlucoseBeforeMeal" Text="" FontSize="Large" 
                    Placeholder="mg/dl" BackgroundColor="GreenYellow" />
-            <Entry Grid.Row="6" Grid.Column="1" HorizontalTextAlignment ="End" x:Name="txtTargetGlucose" Text="mg/dl" 
+            <Entry Grid.Row="6" Grid.Column="1" HorizontalTextAlignment ="End" 
+                   x:Name="txtTargetGlucose" Text="mg/dl" 
                    Placeholder="" BackgroundColor="PaleGoldenrod" />
             <Label Grid.Row="6" Grid.Column="2" x:Name="txtGlucoseToBeCorrected" 
                    Text="----" XAlign="Center" YAlign="Center"/>
@@ -70,7 +72,8 @@
             <Button Grid.Row="7" Grid.Column="3"  Text="Save" 
                         x:Name="btnSaveBolus" Clicked="btnSaveBolus_Click" />
                 
-            <Label Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" Text="Type of meal" XAlign="Center" YAlign="Center"/>
+            <Label Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" Text="Type of meal" 
+                   XAlign="Center" YAlign="Center"/>
             
             <RadioButton Grid.Row="9" Grid.Column="0" Content="b.fast" x:Name="rdbIsBreakfast" />
             <RadioButton Grid.Row="9" Grid.Column="1" Content="lunch" x:Name="rdbIsLunch" />
@@ -86,7 +89,8 @@
             <Label Grid.Row="11" Grid.Column="1" x:Name="txtChoInsulinMeal" Text="----" 
                    XAlign="Center" YAlign="Center" FontSize="Medium" />
             <Label Grid.Row="11" Grid.Column="2" x:Name="txtTotalInsulin" 
-                   Text="----" XAlign="Center" YAlign="Center" FontSize="Large" BackgroundColor="DeepSkyBlue"/>
+                   Text="----" XAlign="Center" YAlign="Center" FontSize="Large" 
+                   BackgroundColor="DeepSkyBlue"/>
             
             <Label Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="3" x:Name="txtStatusBar" 
                    Text="" XAlign="Start" YAlign="Center" FontSize="Large"/>
