--- a/GlucoMan.Mobile/GlucoMan.Mobile/CorrectionParametersPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/CorrectionParametersPage.xaml
@@ -91,16 +91,16 @@
                    Placeholder="mg/dl" BackgroundColor="PaleGoldenrod"/>
             <Grid Grid.Row="12" Grid.Column="3">
                 <Grid.RowDefinitions>
-                    <RowDefinition />
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition />
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Row="0" Grid.Column="0" x:Name="btnCalculateInsulinSensitivity" Text="Calc."
-                     Margin="0,0,0,0" Clicked="btnSaveInsulinSensitivity_Click"/>
-                <Button Grid.Row="1" Grid.Column="0" x:Name="btnSaveInsulinSensitivity" Text="Save"
-                    Margin="0,0,0,0" Clicked="btnSaveRatioCHOInsulin_Click"/>
+                <Button Grid.Row="0" x:Name="btnCalculateInsulinSensitivity" Text="Calc."
+                    Padding="0,0,0,0" Margin="0,0,0,0" Clicked="btnSaveInsulinSensitivity_Click"/>
+                <Button Grid.Row="1" x:Name="btnSaveInsulinSensitivity" Text="Save"
+                    Padding="0,0,0,0" Margin="0,0,0,0" Clicked="btnSaveRatioCHOInsulin_Click"/>
             </Grid>
 
 
