--- a/GlucoMan.Mobile/GlucoMan.Mobile/CorrectionParametersPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/CorrectionParametersPage.xaml
@@ -87,7 +87,7 @@
                     </x:Array>
                 </Picker.ItemsSource>
             </Picker>
-            <Entry  Grid.Row="12" Grid.Column="2" x:Name="txtInsulinSensitivity" HorizontalTextAlignment ="End" Text="" 
+            <Entry  Grid.Row="12" Grid.Column="2" x:Name="txtInsulinCorrectionSensitivity" HorizontalTextAlignment ="End" Text="" 
                    Placeholder="mg/dl" BackgroundColor="PaleGoldenrod"/>
             <Grid Grid.Row="12" Grid.Column="3">
                 <Grid.RowDefinitions>
@@ -97,10 +97,10 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Row="0" x:Name="btnCalculateInsulinSensitivity" Text="Calc."
-                    Padding="0,0,0,0" Margin="0,0,0,0" Clicked="btnSaveInsulinSensitivity_Click"/>
-                <Button Grid.Row="1" x:Name="btnSaveInsulinSensitivity" Text="Save"
-                    Padding="0,0,0,0" Margin="0,0,0,0" Clicked="btnSaveRatioCHOInsulin_Click"/>
+                <Button Grid.Row="0" Margin="-5,-5,-5,-5" FontSize="Caption"  x:Name="btnCalculateInsulinSensitivity" Text="Calc."
+                    Padding="0,0,0,0" Clicked="btnCalculateInsulinSensitivity_Click"/>
+                <Button Grid.Row="1" Margin="-5,-5,-5,-5" FontSize="Caption" x:Name="btnSaveInsulinSensitivity" Text="Save"
+                    Padding="0,0,0,0" Clicked="btnSaveInsulinSensitivity_Click"/>
             </Grid>
 
 
