Meals management almost working. Program needs thorough test. MOdifications to database, delete unuseful tables and fields inside other tables. WinFoms calculator reasonably working. In "Miscellaneous" added Stop button and "copy  database" button. Xamarin copy still not copying file in accessible area. Fod management is still behind on WinForms, zero in Xamarin. Added a form-page for insulin injection site, wil be at zero stage for a while.

--- a/GlucoMan.Mobile/GlucoMan.Mobile/MainPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/MainPage.xaml
@@ -10,16 +10,20 @@
                 Margin="15,0,15,0"></Button>
         <Button x:Name="btnMeals" Text="Meals" Clicked="btnMeals_Clicked" IsEnabled="True"
                 Margin="15,0,15,0"></Button>
+        <Button x:Name="btnFoods" Text="Foods" Clicked="btnFoods_Clicked" IsEnabled="True"
+                Margin="15,0,15,0"></Button>
         <Button x:Name="btnWeighFood" Text="Weigh Food" Clicked="btnWeighFood_Clicked" IsEnabled="False"
                 Margin="15,0,15,0"></Button>
         <Button x:Name="btnInsulinCalc" Text="Meal insulin" Clicked="btnInsulinCalc_Clicked"
                 Margin="15,0,15,0"></Button>
-        <Button x:Name="btnFoodToHitTargetCarbs" Text="Food to eat to reach wanted carbs" Clicked="btnFoodToHitTargetCarbs_Clicked"
+        <Button x:Name="btnInjectionSites" Text="Injection sites" 
+                Clicked="btnInjectionSites_Clicked" IsEnabled="False" Margin="15,0,15,0"></Button>
+        <Button x:Name="btnFoodToHitTargetCarbs" Text="Food to reach target carbs" 
+                Clicked="btnFoodToHitTargetCarbs_Clicked"
                 Margin="15,0,15,0"></Button>
         <Button x:Name="btnHypoPrediction" Text="Hypoglicemia time prediction" Clicked="btnHypoPrediction_Clicked"
                 Margin="15,0,15,0"></Button>
-        <Button x:Name="btnAlarms" Text="Alarm" IsEnabled="False"
-                Clicked="btnAlarms_Clicked" 
+        <Button x:Name="btnAlarms" Text="Alarm" IsEnabled="False" Clicked="btnAlarms_Clicked" 
                 Margin="15,0,15,0"></Button>
         <Button x:Name="btnMiscellaneousFunctions" Text="Miscellaneous functions" 
                 Clicked="btnMiscellaneousFunctions_Clicked"
