--- a/GlucoMan.Mobile/GlucoMan.Mobile/MealsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/MealsPage.xaml
@@ -6,6 +6,7 @@
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="50"/>
@@ -19,40 +20,46 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Label Grid.Row="0" Grid.Column="0" Text="IdMeal" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="0" Grid.Column="1" Text="Type of Meal" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="0" Grid.Column="2" Text="Accuracy" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="0" Grid.Column="3" Text="" XAlign="Center" YAlign="End"/>
+            <RadioButton Grid.Row="0" Grid.Column="0" Content="b.fast" x:Name="rdbIsBreakfast" />
+            <RadioButton Grid.Row="0" Grid.Column="1" Content="lunch" x:Name="rdbIsLunch" />
+            <RadioButton Grid.Row="0" Grid.Column="2" Content="dinner" x:Name="rdbIsDinner" />
+            <RadioButton Grid.Row="0" Grid.Column="3" Content="snack" x:Name="rdbIsSnack" />
 
-            <Entry Grid.Row="1" Grid.Column="0" x:Name="txtIdMeal" BackgroundColor="White" 
+            <Label Grid.Row="1" Grid.Column="0" Text="IdMeal" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="1" Grid.Column="1" Text="Type of Meal" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="1" Grid.Column="2" Text="Accuracy" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="1" Grid.Column="3" Text="" XAlign="Center" YAlign="End"/>
+
+            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtIdMeal" BackgroundColor="White" 
                    FontSize="Medium" HorizontalTextAlignment="Center" IsReadOnly="true"/>
-            <Picker Grid.Row="1" Grid.Column="1" x:Name="cmbTypeOfMeal"  
+            <Picker Grid.Row="2" Grid.Column="1" x:Name="cmbTypeOfMeal"  
                     Title="Type of Meal" 
                     ItemsSource="{Binding Common.TypeOfMeal}" 
                     SelectedItem="{Binding Snack, Mode=TwoWay}"
                     BackgroundColor="PaleGoldenrod"
                     FontSize="Small" />
-            <Entry Grid.Row="1" Grid.Column="2" x:Name="txtAccuracyOfChoMeal" 
+            <Entry Grid.Row="2" Grid.Column="2" x:Name="txtAccuracyOfChoMeal" 
                    BackgroundColor="PaleGoldenrod" FontSize="Medium" />
-            <Picker Grid.Row="1" Grid.Column="3" x:Name="cmbAccuracyMeal"
+            <Picker Grid.Row="2" Grid.Column="3" x:Name="cmbAccuracyMeal"
                     Title="Accuracy" HorizontalTextAlignment="End"
                     ItemsSource="{Binding Common.QualitativeAccuracy}" 
                     SelectedItem="{Binding NotSet, Mode=TwoWay}"
                     BackgroundColor="PaleGoldenrod" FontSize="Small"/>
-            <Label Grid.Row="2" Grid.Column="0" Text="Meal CHO" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="2" Grid.Column="1" Text="Meal Start" XAlign="Center" YAlign="End"/>
-            <Button Grid.Row="2" Grid.Column="2" Text="Save" x:Name="btnSave" Clicked="btnSave_Click"></Button>
-            <Button Grid.Row="2" Grid.Column="3" Text="This" x:Name="btnShowThisMeal" ></Button>
             
-            <Entry Grid.Row="3" Grid.Column="0" x:Name="txtChoOfMeal" BackgroundColor="Aqua"
+            <Label Grid.Row="3" Grid.Column="0" Text="Meal CHO" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="3" Grid.Column="1" Text="Meal Start" XAlign="Center" YAlign="End"/>
+            <Button Grid.Row="3" Grid.Column="2" Text="Save" x:Name="btnSave" Clicked="btnSave_Click"></Button>
+            <Button Grid.Row="3" Grid.Column="3" Text="Details" x:Name="btnShowThisMeal" ></Button>
+            
+            <Entry Grid.Row="4" Grid.Column="0" x:Name="txtChoOfMeal" BackgroundColor="Aqua"
                         FontSize="Medium" HorizontalTextAlignment="End"/>
-            <DatePicker Grid.Row="3" Grid.Column="1" x:Name="dtpMealDateStart" 
+            <DatePicker Grid.Row="4" Grid.Column="1" x:Name="dtpMealDateStart" 
                         BackgroundColor="PaleGreen" FontSize="Small" Format="yyyy-MM-dd" 
                         HorizontalOptions="Center" />
-            <TimePicker Grid.Row="3" Grid.Column="2" x:Name="dtpMealTimeStart" 
+            <TimePicker Grid.Row="4" Grid.Column="2" x:Name="dtpMealTimeStart" 
                         BackgroundColor="PaleGreen" FontSize="Small" Format="HH:mm:ss" 
                         HorizontalOptions="Center" />
-            <Grid Grid.Row="3" Grid.Column="3">
+            <Grid Grid.Row="4" Grid.Column="3">
                 <Grid.RowDefinitions>
                     <RowDefinition />
                 </Grid.RowDefinitions>
@@ -64,9 +71,10 @@
                 <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveMeal" Clicked="btnRemoveMeal_Click"></Button>
             </Grid>
 
-            <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Text="Time" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Text="Carbohydrates" XAlign="Center" YAlign="End"/>
-            <ListView Grid.Row="5" Grid.ColumnSpan="4" x:Name="gridMeals" ItemsSource="{Binding}"
+            <Label Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Text="Time" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Text="Carbohydrates" XAlign="Center" YAlign="End"/>
+            
+            <ListView Grid.Row="6" Grid.ColumnSpan="4" x:Name="gridMeals" ItemsSource="{Binding}"
                       ItemSelected="OnSelection" >
                 <!-- description of data to be shown, in a DataTemplate -->
                 <ListView.ItemTemplate>
